# kwin-theme-inspire

./: BreezeConfig.cmake.in  CMakeLists.txt  FerenKWinConfig.cmake.in  InspireConfig.cmake.in  README.md
kdecoration/: CMakeLists.txt  Messages.sh  breeze.h  breeze.json  breezebutton.cpp  breezebutton.h  breezedecoration.cpp  breezedecoration.h  breezesettingsdata.kcfg  breezesettingsprovider.cpp  breezesettingsprovider.h  breezesizegrip.cpp  breezesizegrip.h  config-breeze.h.cmake  config-inspire.h.cmake  ferenkwin.cpp  ferenkwin.h  inspire.h  inspire.json  inspirebutton.cpp  inspirebutton.h  inspiredecoration.cpp  inspiredecoration.h  inspireexceptionlist.cpp  inspireexceptionlist.h  inspiresettings.kcfgc  inspiresettingsdata.kcfg  inspiresettingsprovider.cpp  inspiresettingsprovider.h  inspiresizegrip.cpp  inspiresizegrip.h
kdecoration/config/: breezeconfigwidget.cpp  breezedetectwidget.cpp  breezeexceptiondialog.cpp  ferenkwinconfig.desktop  inspireconfigwidget.cpp  inspireconfigwidget.h  inspiredecorationconfig.desktop  inspiredetectwidget.cpp  inspiredetectwidget.h  inspireexceptiondialog.cpp  inspireexceptiondialog.h  inspireexceptionlistwidget.cpp  inspireexceptionlistwidget.h  inspireexceptionmodel.cpp  inspireexceptionmodel.h  inspireitemmodel.cpp  inspireitemmodel.h  inspirelistmodel.h
kdecoration/config/ui/: breezeconfigurationui.ui  inspireconfigurationui.ui  inspiredetectwidget.ui  inspireexceptiondialog.ui  inspireexceptionlistwidget.ui
libinspirecommon/: CMakeLists.txt  inspireboxshadowrenderer.cpp  inspireboxshadowrenderer.h
po/ar/: feren_kwin_deco.po  feren_style_config.po
po/bs/: feren_kwin_deco.po  feren_style_config.po
po/ca/: feren_kwin_deco.po  feren_style_config.po
po/ca@valencia/: feren_kwin_deco.po  feren_style_config.po
po/cs/: feren_kwin_deco.po  feren_style_config.po
po/da/: feren_kwin_deco.po  feren_style_config.po
po/de/: feren_kwin_deco.po  feren_style_config.po
po/el/: feren_kwin_deco.po  feren_style_config.po
po/en_GB/: feren_kwin_deco.po  feren_style_config.po
po/es/: feren_kwin_deco.po  feren_style_config.po
po/et/: feren_kwin_deco.po  feren_style_config.po
po/eu/: feren_kwin_deco.po  feren_style_config.po
po/fi/: feren_kwin_deco.po  feren_style_config.po
po/fr/: feren_kwin_deco.po  feren_style_config.po
po/gl/: feren_kwin_deco.po  feren_style_config.po
po/he/: feren_kwin_deco.po  feren_style_config.po
po/hu/: feren_kwin_deco.po  feren_style_config.po
po/ia/: feren_kwin_deco.po  feren_style_config.po
po/id/: feren_kwin_deco.po  feren_style_config.po
po/it/: feren_kwin_deco.po  feren_style_config.po
po/ja/: feren_kwin_deco.po  feren_style_config.po
po/ko/: feren_kwin_deco.po  feren_style_config.po
po/lt/: feren_kwin_deco.po  feren_style_config.po
po/nb/: feren_kwin_deco.po  feren_style_config.po
po/nds/: feren_kwin_deco.po  feren_style_config.po
po/nl/: feren_kwin_deco.po  feren_style_config.po
po/nn/: feren_kwin_deco.po  feren_style_config.po
po/pa/: feren_kwin_deco.po  feren_style_config.po
po/pl/: feren_kwin_deco.po  feren_style_config.po
po/pt/: feren_kwin_deco.po  feren_style_config.po
po/pt_BR/: feren_kwin_deco.po  feren_style_config.po
po/ro/: feren_kwin_deco.po  feren_style_config.po
po/ru/: feren_kwin_deco.po  feren_style_config.po
po/se/: feren_kwin_deco.po
po/sk/: feren_kwin_deco.po  feren_style_config.po
po/sl/: feren_kwin_deco.po  feren_style_config.po
po/sr/: feren_kwin_deco.po  feren_style_config.po
po/sr@ijekavian/: feren_kwin_deco.po  feren_style_config.po
po/sr@ijekavianlatin/: feren_kwin_deco.po  feren_style_config.po
po/sr@latin/: feren_kwin_deco.po  feren_style_config.po
po/sv/: feren_kwin_deco.po  feren_style_config.po
po/tr/: feren_kwin_deco.po  feren_style_config.po
po/uk/: feren_kwin_deco.po  feren_style_config.po
po/zh_CN/: feren_kwin_deco.po  feren_style_config.po
po/zh_TW/: feren_kwin_deco.po  feren_style_config.po
